[package]
name = "blogengine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.26.0"
rss = "2.0"
reqwest = { version = "0.11", features = ["blocking"] }
lazy_static = "1.5.0"
tera = "1.20.0"
quick-xml = { version = "0.37.0", features = [ "serde","serialize"] }

serde = "1.0.213"
actix-files = "0.6.6"
markdown = "1.0.0-alpha.21"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
log = "0.4.22"
env_logger = "0.11.5"
pulldown-cmark = "0.12.2"
askama = "0.12.1"
csv = "1.3.0"
